name:                  utp
version:               0.1.0.0
license:               BSD3
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Network
build-type:            Simple
cabal-version:         >= 1.10
tested-with:           GHC == 7.6.3
homepage:              https://github.com/cobit/utp
bug-reports:           https://github.com/cobit/utp/issues
synopsis:              micro transport protocol
-- description:

source-repository head
  type:                git
  location:            git://github.com/cobit/utp.git

library
  default-language:    Haskell2010
  default-extensions:  PatternGuards
                     , RecordWildCards

  C-sources:           cbits/utp.c
  include-dirs:        include
  includes:            utp.h
  install-includes:    utp.h

  hs-source-dirs:      src
  exposed-modules:     Network.UTP
  build-depends:       base       == 4.6.*
                     , bytestring == 0.10.*
                     , cereal     == 0.3.*
                     , network    == 2.4.*
