name:                  utp
version:               0.1.0.0
license:               BSD3
license-file:          LICENSE
author:                Sam Truzjan
maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
copyright:             (c) 2013-2014 Sam Truzjan
category:              Network
build-type:            Simple
cabal-version:         >= 1.10
tested-with:           GHC == 7.6.3
homepage:              https://github.com/cobit/utp
bug-reports:           https://github.com/cobit/utp/issues
synopsis:              micro transport protocol
description:           micro transport protocol

source-repository head
  type:                git
  location:            git://github.com/cobit/utp.git

source-repository this
  type:                git
  location:            git://github.com/cobit/utp.git
  tag:                 v0.0.0.3

library
  default-language:    Haskell2010
  default-extensions:  PatternGuards
  hs-source-dirs:      src
  exposed-modules:     Network.UTP
                       Network.UTP.Connection
                       Network.UTP.Manager
                       Network.UTP.Packet
                       Network.UTP.Window
  build-depends:       base       == 4.6.*
                     , bytestring == 0.10.*
                     , containers
                     , network    == 2.4.*
                     , time

                     , cereal
                     , data-default
                     , stm
  ghc-options:         -Wall -O2

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Network.UTP.ManagerSpec
                       Network.UTP.PacketSpec
  build-depends:       base == 4.*
                     , bytestring
                     , data-default
                     , cereal

                     , utp

                     , hspec >= 1.8.1.1
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -Wall
